# prysm-test

./: Dockerfile  README.md  go.mod  go.sum
.github/workflows/: docker-image.yml
beacon-chain/node/: BUILD.bazel  node.go
beacon-chain/p2p/: discovery.go  handshake.go
beacon-chain/sync/: rpc_metadata.go  rpc_status.go  subscriber.go  subscriber_beacon_blocks.go  validate_aggregate_proof.go  validate_beacon_blocks.go
cmd/: flags.go
cmd/beacon-chain/: BUILD.bazel  main.go
track/: BUILD.bazel  log.go  server.go  tracker.go
track/proto/: BUILD.bazel  communicate.pb.go  communicate.proto  communicate_grpc.pb.go
