load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "server.go",
        "tracker.go"
    ],
    importpath = "github.com/prysmaticlabs/prysm/v3/track",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "//track/proto:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library"
    ],
)
